2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: implement poppler.IndexIter

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile.am: Fix module naming, fixes #140731 patch by lutz

	* poppler.override: implement poppler.PageTransition

2007-09-05  Ali Afshar <aafshar@gmail.com>

	* popplermodule.c: Add constants

2007-09-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* popplermodule.c: fix build.

	* poppler.override: implement poppler.Page.get_size

2007-09-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs:
	* poppler.override: implement poppler.Dest

2007-09-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: add and change according to 0.6 API.

	* configure.ac: require 0.6.

2007-09-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* arg-types.py: Add Rectangle definitions.

	* poppler.defs: clean up a bit.

	* poppler.override: wrap poppler.Rectangle, fix a small leak
	in poppler_page_find_text.

	* popplermodule.c: add a version number.

	* Makefile.am: add arg-types.py.

2007-08-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Add missing autotools files
	* Work on autotools stuff

2007-08-31  Ali Afshar  <aafshar@gmail.com>

	* initial import
